--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    
+
+    <div class="box-roma">
+
+    </div>
+
+    <div class="box-copenaghen">
+
+    </div>
+
+    <div class="box-tokyo">
+
+    </div>
+
   </body>
 </html>
