Inserimento cover trasparente

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
   <body>
 
     <div class="box-roma">
-
+      <div class="cover"></div>
     </div>
 
     <div class="box-copenaghen">
-
+      <div class="cover"></div>
     </div>
 
     <div class="box-tokyo">
-
+      <div class="cover"></div>
     </div>
 
   </body>
