--- a/index.html
+++ b/index.html
@@ -8,14 +8,17 @@
   <body>
 
     <div class="box-roma">
+      <p>roma</p>
       <div class="cover"></div>
     </div>
 
     <div class="box-copenaghen">
+      <p>copenaghen</p>
       <div class="cover"></div>
     </div>
 
     <div class="box-tokyo">
+      <p>tokyo</p>
       <div class="cover"></div>
     </div>
 
